log
Sat Mar 13 21:57:19 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:57:37 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:57:42 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return *c;
           ^~
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 21:58:02 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2006e9f
Sat Mar 13 22:06:21 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
f4692e0
Sat Mar 13 22:44:02 UTC 2021: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
464b400
Sat Mar 13 22:45:10 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
6d6dc58
Sat Mar 13 23:08:46 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
0de2630
Sat Mar 13 23:09:20 UTC 2021: 
 exercises.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  2|5
total_score: 20/70
6aec0db
Sat Mar 13 23:16:49 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
a6f6cce
Sat Mar 13 23:29:56 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ae53ea5
Sat Mar 13 23:31:27 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
1d099d0
Sat Mar 13 23:32:48 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
a8272e0
Sat Mar 13 23:33:19 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
c52b296
Sat Mar 13 23:40:51 UTC 2021: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
a14bd08
Sat Mar 13 23:43:39 UTC 2021: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
06b056a
Sat Mar 13 23:51:35 UTC 2021: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
176d0a3
Sat Mar 13 23:52:02 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
5ffe07e
Sat Mar 13 23:53:15 UTC 2021: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
0cddcfd
Sat Mar 13 23:53:52 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22d83b7
Sat Mar 13 23:54:55 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
db5d608
Sat Mar 13 23:55:16 UTC 2021: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d2a4ce8
Sat Mar 13 23:55:55 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75cad52
Sat Mar 13 23:56:27 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
376750d
Sun Mar 14 00:00:21 UTC 2021: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  3|4
total_score: 30/70
0ede7ab
Sun Mar 14 00:01:29 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b8c9850
Sun Mar 14 00:05:46 UTC 2021: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
cba784c
Sun Mar 14 00:06:30 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69f9a77
Sun Mar 14 00:07:03 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5989287
Sun Mar 14 00:07:20 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
15a2577
Sun Mar 14 00:07:48 UTC 2021: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
5cbc5e0
Sun Mar 14 00:08:14 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ecfc154
Sun Mar 14 00:08:21 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8aa168d
Sun Mar 14 00:09:46 UTC 2021: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  3|4
total_score: 30/70
3cbaf40
Sun Mar 14 00:10:41 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5363dcf
Sun Mar 14 00:12:01 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ba2c43b
Sun Mar 14 00:23:19 UTC 2021: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 30/70
3bfae75
Sun Mar 14 00:23:33 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
73518cf
Sun Mar 14 00:26:46 UTC 2021: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|3
total_score: 40/70
cee0a88
Sun Mar 14 00:26:55 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
73be6f4
Sun Mar 14 00:28:03 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
f267ec9
Sun Mar 14 00:28:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eaa8faa
Sun Mar 14 00:28:33 UTC 2021: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
c38287f
Sun Mar 14 00:29:27 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
c4d8e09
Sun Mar 14 00:31:02 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
a5cebaa
Sun Mar 14 00:31:55 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
2e918e7
Sun Mar 14 00:37:39 UTC 2021: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
3648fb2
Sun Mar 14 00:39:15 UTC 2021: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
2617528
Sun Mar 14 00:39:33 UTC 2021: 
 exercises.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  7|1
total_score: 60/70
4312b26
Sun Mar 14 00:43:41 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
68c4540
Sun Mar 14 00:43:55 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|0
total_score: 70/70
0b5b21c
Sun Mar 14 00:49:49 UTC 2021: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
9dfc353
Sun Mar 14 00:50:11 UTC 2021: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  8|0
total_score: 70/70
4d756ad
